se cambio los titulos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>Inicio</div>
+        <nav>
+            <ul>
+                <li>inicio</li>
+                <li>cuenta</li>
+                <li>contactos</li>
+            </ul>
+        </nav>
     </body>
 </html>
